Introduce System Objects framework with basic information_schema support (#51)
* feat(system-objects): introduce system object framework (definitions, registry, scanners...)

* test(system-objects): add end-to-end test coverage

* feat(system-objects): enhance scanners + reorganize metagraph interface

* feat(system-objects): add Arrow conversion layer

* feat(system-objects): reorganize extension loader

* docs(system-objects): architecture and usage documentation

* Rename packages