@@ -40,8 +40,7 @@
       <module>storage/aws</module>
 
       <!-- Extensions -->
-      <module>extensions/builtin</module>
-      <module>extensions/plugins/floedb</module>
+      <module>extensions/floedb</module>
 
       <!-- Tools -->
       <module>tools/builtin-validator</module>
@@ -93,7 +92,12 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.5.4</version>
         <configuration>
-          <argLine> -Dcom.google.protobuf.useUnsafe=false -Dio.netty.noUnsafe=true -Djava.util.logging.manager=org.jboss.logmanager.LogManager
+          <argLine>
+            --add-opens=java.base/java.nio=ALL-UNNAMED
+            --add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED
+            -Dcom.google.protobuf.useUnsafe=false
+            -Dio.netty.noUnsafe=true
+            -Djava.util.logging.manager=org.jboss.logmanager.LogManager
           </argLine>
         </configuration>
       </plugin>
@@ -103,7 +107,12 @@
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>3.5.4</version>
         <configuration>
-          <argLine> -Dcom.google.protobuf.useUnsafe=false -Dio.netty.noUnsafe=true -Djava.util.logging.manager=org.jboss.logmanager.LogManager
+          <argLine>
+            --add-opens=java.base/java.nio=ALL-UNNAMED
+            --add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED
+            -Dcom.google.protobuf.useUnsafe=false
+            -Dio.netty.noUnsafe=true
+            -Djava.util.logging.manager=org.jboss.logmanager.LogManager
           </argLine>
         </configuration>
       </plugin>
